# TGEngine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
Source/: CMakeLists.txt  PrecompiledHeader.h
Source/Audio/: AudioClip.cpp  AudioClip.h  AudioSource.cpp  AudioSource.h  OpenALDebug.h
Source/Audio/Importer/: AudioDecoder.h  RiffReader.h  VorbisAudioDecoder.cpp  VorbisAudioDecoder.h  WavAudioDecoder.cpp  WavAudioDecoder.h
Source/Core/: Algorithm.h  Delegate.h  DelegateChain.h  DynamicCast.h  ExpressionTemplates.h  ICloneable.h  IComparable.h  MakeSharedEnabler.h  NonCopyable.h  Operator.h  Rtti.h  RuntimeObject.h  Simd.h  TypeTraits.h
Source/Diagnostics/: Debug.cpp  Debug.h
Source/Diagnostics/MacOS/: MacOSDebug.mm
Source/Diagnostics/Windows/: WindowsDebug.cpp
Source/Drawing/: Font.cpp  Font.h  FontFace.cpp  FontFace.h  FontFactory.cpp  FontFactory.h  Image.cpp  Image.h
Source/Engine/: Application.cpp  Application.h  AssetModule.cpp  AssetModule.h  AudioModule.cpp  AudioModule.h  Engine.cpp  Engine.h  EngineConfiguration.h  InputModule.cpp  InputModule.h  Module.h  RendererModule.cpp  RendererModule.h  SceneModule.cpp  SceneModule.h  TaskModule.cpp  TaskModule.h  TimeModule.cpp  TimeModule.h  TimerModule.cpp  TimerModule.h
Source/Engine/MacOS/: MacOSApplication.h  MacOSApplication.mm  MacOSEngine.h  MacOSEngine.mm
Source/Engine/Windows/: WindowsApplication.cpp  WindowsApplication.h  WindowsEngine.h
Source/Game/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  GameObject.cpp  GameObject.h  RendererComponent.cpp  RendererComponent.h  TransformComponent.cpp  TransformComponent.h
Source/Game/UI/: RectTransform.cpp  RectTransform.h
Source/Graphics/: FontAtlas.cpp  FontAtlas.h  Graphics.cpp  Graphics.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Pass.cpp  Pass.h  RenderTarget.cpp  RenderTarget.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  VertexBuffer.cpp  VertexBuffer.h  VertexFormat.h  VideoMode.h
Source/Graphics/OpenGL/: OpenGLContext.h  OpenGLDebug.h  OpenGLGraphics.cpp  OpenGLGraphics.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRenderTarget.cpp  OpenGLRenderTarget.h  OpenGLShaderCode.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Source/Graphics/OpenGL/MacOS/: MacOSOpenGLContext.mm
Source/Graphics/OpenGL/Windows/: WindowsOpenGLContext.cpp
Source/IO/: Directory.cpp  Directory.h  DirectoryInfo.cpp  DirectoryInfo.h  File.cpp  File.h  FileAttributes.h  FileStream.cpp  FileStream.h  FileSystemEnumerable.h  Path.cpp  Path.h  Stream.h
Source/IO/MacOS/: MacOSFile.mm  MacOSPath.mm
Source/IO/Posix/: PosixDirectory.cpp  PosixFile.cpp  PosixFileStream.cpp  PosixFileSystemEnumerable.inl  PosixPath.h  PosixPath.inl
Source/IO/Windows/: WindowsDirectory.cpp  WindowsFile.cpp  WindowsFileStream.cpp  WindowsFileSystemEnumerable.inl  WindowsPath.cpp  WindowsPath.h  WindowsPath.inl
Source/Input/: Gamepad.cpp  Gamepad.h  InputManager.cpp  InputManager.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
Source/Legacy/: AutoCast.h  Batch.cpp  Batch.h  CameraComponent.cpp  CameraComponent.h  EventDispatcher.cpp  EventDispatcher.h  HandleGuard.h  ImageProcessor.h  InstanceCounter.h  InstantiateCounter.h  JpgImageProcessor.h  MacOSLocale.mm  MiniDump.cpp  MiniDump.h  Model.cpp  Model.h  ModelScene.cpp  PngImageProcessor.h  SafeFileHandle.h  Singleton.h  TQuaternion.cpp  TQuaternion.h  TextureAtlasTree.cpp  TextureAtlasTree.h  UIBatch.cpp  UIBatch.h  UIElement.cpp  UIElement.h  UISprite.cpp  UISprite.h  UIText.cpp  UIText.h  WebPImageProcessor.h  WeightSelector.h  WindowsDrawing.cpp
Source/Legacy/Android/: AndroidApplication.h  AndroidConfig.h  AndroidMain.cpp
Source/Legacy/Direct3D11/: Direct3D11Graphics.cpp  Direct3D11Graphics.h  Direct3D11GraphicsFwd.h  Direct3D11ShaderCode.h  Direct3D11VertexBuffer.cpp
Source/Legacy/Direct3D9/: D3D9Error.cpp  D3D9Error.h  D3D9Fwd.h  D3D9GraphicsDevice.cpp  D3D9GraphicsDevice.h  D3D9Sprite.h  D3D9Texture2D.cpp  D3D9Texture2D.h  D3d9Shader.cpp  D3d9Shader.h  D3d9Utility.cpp  D3d9Utility.h  D3d9VertexBuffer.cpp  D3d9VertexBuffer.h
Source/Legacy/IOS/: IOSTime.cpp  IOSTime.h
Source/Legacy/Metal/: MetalBuffer.h  MetalBuffer.mm  MetalCommandQueue.cpp  MetalCommandQueue.h  MetalGraphicsDevice.h  MetalGraphicsDevice.mm  MetalRenderer.h  MetalRenderer.mm  MetalUtility.h  MetalUtility.mm
Source/Math/: Circle.h  Color.h  Color32.h  Extent.h  Mathf.h  Matrix3x4.h  Matrix4x4.h  Rect.h  Vector2.h  Vector3.h  Vector4.h
Source/Platform/: Config.h  Environment.cpp  Environment.h  OperatingSystem.h  PlatformID.h  Version.h  Window.cpp  Window.h  WindowStyle.h
Source/Platform/MacOS/: MacOSEnvironment.mm  MacOSWindow.h  MacOSWindow.mm
Source/Platform/Windows/: SafeFindHandle.h  SafeHandle.h  SafeRegistryHandle.h  Windows.h  WindowsConfig.h  WindowsEnvironment.cpp  WindowsWindow.cpp  WindowsWindow.h
Source/Random/: Random.cpp  Random.h
Source/Serialization/: ISerializable.h  SerializationInfo.h
Source/Test/: Test.h
Source/Test/Core/: DelegateTest.h
Source/Test/IO/: DirectoryTest.h  FileStreamTest.h  FileTest.h  PathTest.h
Source/Test/Platform/: EnvironmentTest.h
Source/Test/String/: FixedStringTest.h  StringTest.h
Source/Test/Time/: DateTimeTest.h
Source/Text/: Encoding.cpp  Encoding.h  FixedString.h  Hash.cpp  Hash.h  String.h  StringHash.h  StringTraits.h  UUID.h
Source/Threading/: DispatchQueue.cpp  DispatchQueue.h  Thread.cpp  Thread.h
Source/Threading/MacOS/: MacOSThread.cpp
Source/Threading/Windows/: WindowsThread.cpp
Source/Time/: DateTime.cpp  DateTime.h  Stopwatch.h  TimeSpan.h  TimeZoneInfo.h  Timer.cpp  Timer.h
Source/Time/MacOS/: MacOSTimeZoneInfo.mm
Source/Time/Windows/: WindowsTimeZoneInfo.cpp
cmake/: options.cmake
include/: CMakeLists.txt
include/System.Diagnostics/: Debug.h
include/System.IO/: File.h  (+18 more)
src/: CMakeLists.txt
test/: FixedStringTest.h  StringTest.h
(+242 files in other folders)
